samples/_failures_safe/1761257824_a8a534_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b8f69d8.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_6b8f69d8.c:178:9: error: expected declaration or statement at end of input
  178 |         if (dist[i] == INT_MAX) {
      |         ^~
./samples/SAFE/__tmp_6b8f69d8.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6b8f69d8.c:178:9: error: expected declaration or statement at end of input
